// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CoachingConsent disables name field on enterprise user 1`] = `
<main>
  <div
    className="w-100 d-flex justify-content-center align-items-center shadow coaching-header"
  >
    <img
      alt="Logo"
      className="logo"
      src="icon/mock/path"
    />
  </div>
  <div
    className="col-12 col-md-6 col-xl-5 mx-auto mt-4 p-5 shadow-lg"
  >
    <h2
      className="h2"
    >
      Let’s get started.
    </h2>
    <p>
      MicroBachelors programs include coaching that focuses on your career, education, and how you'll achieve results through one-on-one communication with an experienced professional. If you’re interested, provide the information below and click “Submit,” and our coaching partner will connect with you via email and/or text message to help you move forward. Terms and conditions apply.*
    </p>
    <div>
      <form
        onSubmit={[Function]}
      >
        <div
          className="py-3"
        >
          <div
            className="alert d-flex align-items-start alert alert-primary"
          >
            <div />
            <div>
              <span>
                Your name is managed by 
                <b>
                  test person
                </b>
                . Contact your administrator for help.
              </span>
            </div>
          </div>
          <div
            className="alert-warning mb-2"
          >
            
          </div>
          <label
            className="h6"
            htmlFor="fullName"
          >
            Please confirm your name
          </label>
          <input
            className="form-control"
            defaultValue="edx edx"
            disabled={true}
            id="fullName"
            name="full-name"
            type="text"
          />
        </div>
        <div
          className="py-3"
        >
          <div
            className="alert-warning mb-2"
          >
            
          </div>
          <label
            className="h6"
            htmlFor="phoneNumber"
          >
            Enter your mobile number
          </label>
          <input
            className="form-control"
            defaultValue="1234567890"
            id="phoneNumber"
            name="phone_number"
            type="text"
          />
        </div>
        <div
          className=" py-3"
        >
          <p
            className="small font-italic"
          >
            * Coaching services are included at no additional cost to learners with US phone numbers. Coaching includes recurring text messages. Message and data rates may apply. Text STOP to opt-out.
          </p>
        </div>
        <div
          className="alert-warning mb-2"
        >
          
        </div>
        <div
          className="d-flex flex-column align-items-center"
        >
          <button
            className="w-100 btn btn-outline-primary"
            disabled={false}
            type="submit"
          >
            Sign up for coaching
          </button>
        </div>
        <div
          className="mt-3"
        >
          <a
            className="pgn__hyperlink default-link standalone-link mt-3 text-dark btn-link small"
            href="http://localhost:18000/dashboard/"
            onClick={[Function]}
            target="_self"
          >
            I prefer not to be contacted with free coaching services
          </a>
        </div>
      </form>
    </div>
  </div>
</main>
`;

exports[`CoachingConsent display completed box when successfully submitted 1`] = `
<main>
  <div
    className="w-100 d-flex justify-content-center align-items-center shadow coaching-header"
  >
    <img
      alt="Logo"
      className="logo"
      src="icon/mock/path"
    />
  </div>
  <div>
    <div
      className="d-flex justify-content-center align-items-center flex-column"
      style={
        Object {
          "height": "50vh",
        }
      }
    >
      <div
        className="spinner-border text-primary"
        role="status"
      >
        <span
          className="sr-only"
        >
          Submitting...
        </span>
      </div>
    </div>
  </div>
</main>
`;

exports[`CoachingConsent should render 1`] = `
<main>
  <div
    className="w-100 d-flex justify-content-center align-items-center shadow coaching-header"
  >
    <img
      alt="Logo"
      className="logo"
      src="icon/mock/path"
    />
  </div>
  <div
    className="col-12 col-md-6 col-xl-5 mx-auto mt-4 p-5 shadow-lg"
  >
    <h2
      className="h2"
    >
      Let’s get started.
    </h2>
    <p>
      MicroBachelors programs include coaching that focuses on your career, education, and how you'll achieve results through one-on-one communication with an experienced professional. If you’re interested, provide the information below and click “Submit,” and our coaching partner will connect with you via email and/or text message to help you move forward. Terms and conditions apply.*
    </p>
    <div>
      <form
        onSubmit={[Function]}
      >
        <div
          className="py-3"
        >
          <div
            className="alert-warning mb-2"
          >
            
          </div>
          <label
            className="h6"
            htmlFor="fullName"
          >
            Please confirm your name
          </label>
          <input
            className="form-control"
            defaultValue="edx edx"
            disabled={false}
            id="fullName"
            name="full-name"
            type="text"
          />
        </div>
        <div
          className="py-3"
        >
          <div
            className="alert-warning mb-2"
          >
            
          </div>
          <label
            className="h6"
            htmlFor="phoneNumber"
          >
            Enter your mobile number
          </label>
          <input
            className="form-control"
            defaultValue="1234567890"
            id="phoneNumber"
            name="phone_number"
            type="text"
          />
        </div>
        <div
          className=" py-3"
        >
          <p
            className="small font-italic"
          >
            * Coaching services are included at no additional cost to learners with US phone numbers. Coaching includes recurring text messages. Message and data rates may apply. Text STOP to opt-out.
          </p>
        </div>
        <div
          className="alert-warning mb-2"
        >
          
        </div>
        <div
          className="d-flex flex-column align-items-center"
        >
          <button
            className="w-100 btn btn-outline-primary"
            disabled={false}
            type="submit"
          >
            Sign up for coaching
          </button>
        </div>
        <div
          className="mt-3"
        >
          <a
            className="pgn__hyperlink default-link standalone-link mt-3 text-dark btn-link small"
            href="http://localhost:18000/dashboard/"
            onClick={[Function]}
            target="_self"
          >
            I prefer not to be contacted with free coaching services
          </a>
        </div>
      </form>
    </div>
  </div>
</main>
`;
